Update and rename README.txt.txt to README.html
inserção credenciais acesso banco de dados

--- a/README.html
+++ b/README.html
@@ -52,6 +52,7 @@
     <h2>Application URL's</h2>
     	<p>book-api	http://localhost:8080/swagger-ui.html	</p>
 	<p>book-ui	http://localhost:3000		          crenciais(admin/admin, user/user or signing up a new user)</p>
+	<p>banco de dados http://localhost:8080/h2-console 	  crenciais(user: sa password: password) </p>
 
     <h2>Endpoints</h2>
 <p>Os seguintes endpoints estão disponíveis neste projeto:</p>
